@@ -1,39 +1,18 @@
 package app;
 
-import javafx.application.Application;
-import javafx.stage.Stage;
-import view.scene.MenuScene;
+import view.frame.MainFrame;
 
 /**
- * Entry point của ứng dụng mô phỏng giao thông (JavaFX).
+ * Điểm khởi động của ứng dụng mô phỏng giao thông đô thị.
  *
- * <p>Khởi động JavaFX, tạo Stage chính và hiển thị màn hình menu.</p>
- *
- * <p>Compile & run với JavaFX trên module-path:
- * <pre>
- *   mvn javafx:run
- *   # hoặc
- *   java --module-path /path/to/javafx-sdk/lib \
- *        --add-modules javafx.controls,javafx.fxml \
- *        -cp target/classes app.Main
- * </pre>
+ * <p>
+ * Chỉ khởi tạo {@link MainFrame} — toàn bộ logic được
+ * khởi động từ bên trong lớp đó.
  * </p>
  */
-public class Main extends Application {
-
-    @Override
-    public void start(Stage primaryStage) {
-        primaryStage.setTitle("Smart City Traffic Simulation");
-        primaryStage.setMinWidth(800);
-        primaryStage.setMinHeight(600);
-        primaryStage.setResizable(true);
-
-        MenuScene menuScene = new MenuScene(primaryStage);
-        primaryStage.setScene(menuScene.getScene());
-        primaryStage.show();
-    }
+public class Main {
 
     public static void main(String[] args) {
-        launch(args);
+        new MainFrame();
     }
 }
